fix alignment

--- a/src/style.scss
+++ b/src/style.scss
@@ -54,6 +54,7 @@ html {
       margin-bottom: 8px;
       border-radius: 4px;
       min-height: 50px;
+      align-content: center;
 
       .artifact-link {
         max-width: 100%;
